<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/nav_events">

    <fragment
        android:id="@+id/nav_events"
        android:name="com.jayanidukaushalya.myticketsbyhewas.ui.events.EventsFragment"
        android:label="@string/nav_events"
        tools:layout="@layout/fragment_events">
        <action
            android:id="@+id/action_events_to_event_detail"
            app:destination="@id/nav_event_detail"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_event_detail"
        android:name="com.jayanidukaushalya.myticketsbyhewas.ui.events.EventDetailFragment"
        android:label="@string/title_event_detail"
        tools:layout="@layout/fragment_event_detail">
        <argument
            android:name="eventId"
            app:argType="string" />
        <action
            android:id="@+id/action_event_detail_to_checkout"
            app:destination="@id/nav_checkout"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_checkout"
        android:name="com.jayanidukaushalya.myticketsbyhewas.ui.events.CheckoutFragment"
        android:label="@string/title_checkout"
        tools:layout="@layout/fragment_checkout">
        <argument
            android:name="ticketsJson"
            app:argType="string" />
        <action
            android:id="@+id/action_checkout_to_ticket_detail"
            app:destination="@id/nav_ticket_detail"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/nav_events" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.jayanidukaushalya.myticketsbyhewas.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_ticket_detail"
            app:destination="@id/nav_ticket_detail"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_ticket_detail"
        android:name="com.jayanidukaushalya.myticketsbyhewas.ui.profile.TicketDetailFragment"
        android:label="Ticket Details"
        tools:layout="@layout/fragment_ticket_detail">
        <argument
            android:name="ticketId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_admin"
        android:name="com.jayanidukaushalya.myticketsbyhewas.ui.admin.AdminFragment"
        android:label="@string/nav_admin"
        tools:layout="@layout/fragment_admin" />

</navigation>
